@@ -1,28 +1,21 @@
 package com.jamiedev.bygone.common.block;
 
-import com.jamiedev.bygone.Bygone;
-import com.mojang.serialization.MapCodec;
 import net.minecraft.core.BlockPos;
 import net.minecraft.server.level.ServerLevel;
+import net.minecraft.util.Mth;
 import net.minecraft.util.RandomSource;
-import net.minecraft.world.InteractionResult;
 import net.minecraft.world.entity.Entity;
 import net.minecraft.world.entity.LivingEntity;
-import net.minecraft.world.entity.player.Player;
 import net.minecraft.world.item.ItemStack;
 import net.minecraft.world.item.context.BlockPlaceContext;
 import net.minecraft.world.level.Level;
 import net.minecraft.world.level.block.Block;
-import net.minecraft.world.level.block.RedstoneTorchBlock;
 import net.minecraft.world.level.block.state.BlockBehaviour;
 import net.minecraft.world.level.block.state.BlockState;
 import net.minecraft.world.level.block.state.StateDefinition;
 import net.minecraft.world.level.block.state.properties.BlockStateProperties;
-import net.minecraft.world.level.block.state.properties.BooleanProperty;
 import net.minecraft.world.level.block.state.properties.IntegerProperty;
-import net.minecraft.world.level.gameevent.GameEvent;
 import net.minecraft.world.phys.AABB;
-import net.minecraft.world.phys.BlockHitResult;
 import net.minecraft.world.ticks.TickPriority;
 
 import javax.annotation.Nullable;
@@ -32,7 +25,6 @@ import java.util.function.ToIntFunction;
 
 public class LithineLampBlock extends Block {
     public static final IntegerProperty POWER = BlockStateProperties.POWER;
-    public static final MapCodec<LithineLampBlock> CODEC = simpleCodec(LithineLampBlock::new);
 
     LithineLampBlock ref;
 
@@ -56,7 +48,7 @@ public class LithineLampBlock extends Block {
     }
 
     @Override
-    protected void tick(BlockState state, ServerLevel level, BlockPos pos, RandomSource random) {
+    public void tick(BlockState state, ServerLevel level, BlockPos pos, RandomSource random) {
         super.tick(state, level, pos, random);
         AABB boundingBox = new AABB(pos).inflate(15);
         List<Entity> entities = level.getEntitiesOfClass(Entity.class, boundingBox);
@@ -66,8 +58,8 @@ public class LithineLampBlock extends Block {
         ));
         if (!entities.isEmpty()) {
             int lastDistance = (int) Math.floor(pos.getCenter()
-                .distanceTo(entities.getFirst().position()));
-            lastDistance = Math.clamp(lastDistance - 1, 0, 15);
+                .distanceTo(entities.get(0).position()));
+            lastDistance = Mth.clamp(lastDistance - 1, 0, 15);
             level.setBlock(pos, state.setValue(POWER, 15 - lastDistance), 10);
         } else level.setBlock(pos, state.setValue(POWER, 0), 10);
         level.scheduleTick(pos, this, 1, TickPriority.NORMAL);
